sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:16: error: not found: value inverse
	inverse=false
        ^AlgGnomeSort:21: error: not found: value inverse
		inverse=true
                ^